[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["Tomoya Yoshioka <tomoya.y@icloud.com>"]

[tool.poetry.dependencies]
python = "3.10"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
